Fix deployment: Update index.html with proper title and meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>begins.guide - Interactive Idea Validator & Business Tools</title>
+    <meta name="description" content="Validate your business ideas with our C.N.E.S.T. framework. From idea to revenue with begins.guide - your complete business validation platform.">
+    <meta name="keywords" content="business ideas, idea validation, entrepreneurship, C.N.E.S.T. framework, business tools">
+    <meta name="author" content="begins.guide">
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="begins.guide - Interactive Idea Validator">
+    <meta property="og:description" content="Validate your business ideas with our proven C.N.E.S.T. framework">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://begins-guide.web.app">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="begins.guide - Interactive Idea Validator">
+    <meta name="twitter:description" content="Validate your business ideas with our proven C.N.E.S.T. framework">
   </head>
   <body>
     <div id="root"></div>
